fix the “squished graph” issue

--- a/lms/static/sass/courseware/_course-progress-01.scss
+++ b/lms/static/sass/courseware/_course-progress-01.scss
@@ -20,7 +20,7 @@
 
     .grade-detail-graph {
       width: 100%;
-      height: 36rem;
+      min-height: 36rem;
       margin: 2rem 0 5rem;
     }
   }
